--- a/views/reversed.erb
+++ b/views/reversed.erb
@@ -11,5 +11,7 @@
 
     <!--   Use ERB tags to bring in an instance variable containing the reversed string -->
 
+    <%= params["string"].reverse %>
+
   </body>
 </html>
